dist/1.0/bin/sample/retrieveUnpackaged/objects/QueueManagement__c.object
<CustomObject>
    <description>Stores information about Queue managers</description>
    <fields>
        <fullName>Assigned_Manager__c</fullName>
        <description>Queue Manager</description>
        <inlineHelpText>Queue Manager</inlineHelpText>
        <label>Assigned Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Queue_Managers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>Indicates for what type of Object the Queue was created</description>
        <inlineHelpText>Indicates for what type of Object the Queue was created</inlineHelpText>
        <label>Object Type</label>
        <picklist>
            <picklistValues>
                <fullName>Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <description>Name of the Queue</description>
        <inlineHelpText>Name of the Queue</inlineHelpText>
        <label>Queue Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Queue Manager</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Queue_Name__c</columns>
        <columns>Object_Type__c</columns>
        <columns>Assigned_Manager__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MNG{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queue Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>